examples/src/valid/gcdIterative.alice

The room gcd (number x, number y) contained a number
opened
  eventually (y == 0) because
    opened
      temp was a number and temp became y.
      y became x % y.
      x became temp.
    closed
  enough times.
  Alice found x.
closed

The looking-glass hatta ()
opened
   x was a number and y was a number and z was a number too.
   "Enter the first number" spoke,  what was x?.
   "Enter the second number" spoke,  what was y?.
   z became gcd(x, y).
   "gcd(" spoke and x spoke and "," spoke and y spoke and ") = " spoke and z said Alice.
closed
