examples/src/invalid/runTest02.alice

The looking-glass hatta ()
opened 
  x was a number of -15.
  arr had x number.
  opened
  closed
closed
